--- a/WpfApp2/WpfApp2/MailsHome.xaml
+++ b/WpfApp2/WpfApp2/MailsHome.xaml
@@ -17,7 +17,13 @@
             <RowDefinition Height="10*"></RowDefinition>
         </Grid.RowDefinitions>
         <DockPanel Grid.ColumnSpan="2" Margin="10 20">
-
+            <Image  Name="im"
+          Source=""
+          Height="50"
+          Width="50"
+        Margin="15 0">
+            
+            </Image>
             <TextBlock
     Style="{StaticResource MaterialDesignHeadline4TextBlock}" Name="usernamewpf">
 
