--- a/WpfApp2/WpfApp2/MailsHome.xaml
+++ b/WpfApp2/WpfApp2/MailsHome.xaml
@@ -18,7 +18,7 @@
         </Grid.RowDefinitions>
         <DockPanel Grid.ColumnSpan="2" Margin="10 20">
             <Image  Name="im"
-          Source=""
+         
           Height="50"
           Width="50"
         Margin="15 0">
@@ -74,7 +74,7 @@
                 <DataGridTextColumn Binding="{Binding username}" Header="From"></DataGridTextColumn>
                 <DataGridTextColumn Binding="{Binding username}" Header="To"></DataGridTextColumn>
                 <DataGridTextColumn Binding="{Binding Subject}" Header="Subject"></DataGridTextColumn>
-                <DataGridTextColumn Binding="{Binding Msgdate}" Header="Date"></DataGridTextColumn>
+                <DataGridTextColumn Binding="{Binding Msgdate}" Header="Date" Width="200"></DataGridTextColumn>
                 <DataGridTextColumn Binding="{Binding FromEmail}" Header="FromEmail"></DataGridTextColumn>
                 <DataGridTextColumn Binding="{Binding ToEmail}" Header="ToEmail"></DataGridTextColumn>
                 <DataGridTextColumn Binding="{Binding Description}" Header="Description"></DataGridTextColumn>
@@ -87,11 +87,52 @@
                         <StackPanel>
                             <Expander
       HorizontalAlignment="Stretch"
-      Header="Description">
+      >
+                                <Expander.Header>
+                                  
+                                        <DockPanel>
+                                            <Grid>
+                                                <Grid.ColumnDefinitions>
+                                                    <ColumnDefinition Width="auto"></ColumnDefinition>
+                                                    <ColumnDefinition Width="auto"></ColumnDefinition>
+                                                </Grid.ColumnDefinitions>
+                                                <Grid.RowDefinitions>
+                                                    <RowDefinition Height="auto" ></RowDefinition>
+                                                    <RowDefinition Height="auto"></RowDefinition>
+                                                    <RowDefinition Height="auto"></RowDefinition>
+                                                    <RowDefinition Height="auto"></RowDefinition>
+
+                                                    
+
+
+
+                                                </Grid.RowDefinitions>
+                                            <TextBlock Text="Username : " FontWeight="Bold" Grid.Column="0" Grid.Row="0" Margin="2 3"></TextBlock>
+                                            <TextBlock Text="{Binding username }" Grid.Column="1" Grid.Row="0" HorizontalAlignment="Left" Margin="0 3" ></TextBlock>
+
+                                            <TextBlock Text="Email : " FontWeight="Bold" Grid.Column="0" Grid.Row="1" Margin="2 3"></TextBlock>
+                                            <TextBlock Text="{Binding FromEmail }"  Grid.Column="1" Grid.Row="1" Margin="0 3" ></TextBlock>
+
+                                            <TextBlock Text="Email : " FontWeight="Bold" Grid.Column="0" Grid.Row="1" Margin="2 3" ></TextBlock>
+                                            <TextBlock Text="{Binding ToEmail }" Grid.Column="1" Grid.Row="1" Margin="0 3"></TextBlock>
+
+                                            <TextBlock Text="Subject : " FontWeight="Bold" Grid.Column="0" Grid.Row="2" Margin="2 3" ></TextBlock>
+                                            <TextBlock Text="{Binding Subject }" Grid.Column="1" Grid.Row="2" Margin="0 3"></TextBlock>
+
+                                            <TextBlock Text="Date : " FontWeight="Bold" Grid.Column="0" Grid.Row="3" Margin="2 3" ></TextBlock>
+                                            <TextBlock Text="{Binding Msgdate }" Grid.Column="1" Grid.Row="3" Margin="0 3"></TextBlock>
+
+
+
+                                            </Grid>
+                                        </DockPanel>
+                                    
+                                </Expander.Header>
                                 <StackPanel
         Orientation="Vertical"
         TextBlock.Foreground="{DynamicResource MaterialDesignBody}"
         Margin="24,8,24,16">
+                                    
                                     <DockPanel>
                                         <Grid>
                                             <Grid.ColumnDefinitions>
@@ -100,37 +141,15 @@
                                             </Grid.ColumnDefinitions>
                                             <Grid.RowDefinitions>
                                                 <RowDefinition Height="auto"></RowDefinition>
-                                                <RowDefinition Height="auto"></RowDefinition>
-                                                <RowDefinition Height="auto"></RowDefinition>
-                                                <RowDefinition Height="auto"></RowDefinition>
-
-                                                <RowDefinition Height="auto"></RowDefinition>
-                                                <RowDefinition ></RowDefinition>
-                                                <RowDefinition Height="6"></RowDefinition>
-
-
-
+                                                <RowDefinition Height="*"></RowDefinition>
                                             </Grid.RowDefinitions>
-                                            <TextBlock Text="Username : " FontWeight="Bold" Grid.Column="0" Grid.Row="0" ></TextBlock>
-                                            <TextBlock Text="{Binding username }" Grid.Column="1" Grid.Row="0" ></TextBlock>
-
-                                            <TextBlock Text="Email : " FontWeight="Bold" Grid.Column="0" Grid.Row="1" ></TextBlock>
-                                            <TextBlock Text="{Binding FromEmail }" Grid.Column="1" Grid.Row="1" ></TextBlock>
-
-                                            <TextBlock Text="Email : " FontWeight="Bold" Grid.Column="0" Grid.Row="1" ></TextBlock>
-                                            <TextBlock Text="{Binding ToEmail }" Grid.Column="1" Grid.Row="1" ></TextBlock>
-
-                                            <TextBlock Text="Subject : " FontWeight="Bold" Grid.Column="0" Grid.Row="2" ></TextBlock>
-                                            <TextBlock Text="{Binding Subject }" Grid.Column="1" Grid.Row="2" ></TextBlock>
-
-                                            <TextBlock Text="Date : " FontWeight="Bold" Grid.Column="0" Grid.Row="3" ></TextBlock>
-                                            <TextBlock Text="{Binding Msgdate }" Grid.Column="1" Grid.Row="3" ></TextBlock>
+                                           
 
 
-                                            <TextBlock Text="{Binding Description }"  Grid.ColumnSpan="2" Grid.Row="4" TextWrapping="Wrap" Width="700"></TextBlock>
+                                            <TextBlock Text="{Binding Description }" FontFamily="Comic Sans MS" FontSize="20" Grid.ColumnSpan="2"  TextWrapping="Wrap" Width="700"></TextBlock>
 
-                                            <Button Name="deletemsg" Click="Button_Delete" Margin="0 10" Width="120" HorizontalAlignment="Center" Grid.Column="0" Grid.Row="5">Delete</Button>
-                                            <Button Click="Button_Reply" Margin="0 10" Width="120" HorizontalAlignment="Center" Grid.Column="1" Grid.Row="5">Reply</Button>
+                                            <Button Name="deletemsg" Click="Button_Delete" Margin="0 10" Width="120" HorizontalAlignment="Center" Grid.Column="0" Grid.Row="1">Delete</Button>
+                                            <Button Click="Button_Reply" Margin="0 10" Width="120" HorizontalAlignment="Center" Grid.Column="1" Grid.Row="1">Reply</Button>
 
                                             
 
