--- a/WpfApp2/WpfApp2/MailsHome.xaml
+++ b/WpfApp2/WpfApp2/MailsHome.xaml
@@ -53,10 +53,10 @@
 
                         <Button  Content="Account Info" Click="Button_info" Margin="0 7" />
                         <Button Click="Button_New" Margin="0 7">New Message</Button>
-                        <Button Click="Button_inbox " Margin="0 7">Inbox</Button>
-                        <Button Click="Button_Sent" Content="Sent" Margin="0 7"/>
-                        <Button Click="Button_spam" Margin="0 7">Spam</Button>
-                        <Button Click="Button_draft" Margin="0 7">Drafts</Button>
+                        <Button Click="Button_inbox " Name="btnInbox" Margin="0 7">Inbox</Button>
+                        <Button Click="Button_Sent" Name="btnSent" Content="Sent" Margin="0 7"/>
+                        <Button Click="Button_spam" Name="btnSpam" Margin="0 7">Spam</Button>
+                        <Button Click="Button_draft" Name="btnDraft" Margin="0 7">Drafts</Button>
                         <Button Name="contmsg" Margin="0 7" Click="Button_cont" Content="Send the draft"/>
 
                     </StackPanel>
