--- a/WpfApp2/WpfApp2/Info.xaml
+++ b/WpfApp2/WpfApp2/Info.xaml
@@ -11,7 +11,7 @@
         <Button Style="{StaticResource MyButton}" Width="50" HorizontalAlignment="Left" Background="#8469f4" BorderThickness="0" Click="back_welcome">
             <Image Source="images/back.png" />
         </Button>
-        <DockPanel Width="700" Height="auto" Margin="100" >
+        <DockPanel Width="700" Height="auto" Margin="0" >
             <materialDesign:Flipper
   Style="{StaticResource MaterialDesignCardFlipper}" >
                 <materialDesign:Flipper.FrontContent>
@@ -156,14 +156,14 @@
           materialDesign:HintAssist.Hint="User name"
           materialDesign:HintAssist.IsFloating="True"
           Margin="0 12 0 30" Name="newUserName">
-                                
+
                             </TextBox>
-                            <TextBox
+                            <PasswordBox
                                 Grid.Row="2"
           materialDesign:HintAssist.Hint="Password"
           materialDesign:HintAssist.IsFloating="True"
           Margin="0 12 0 30" Name="newPassword">
-                            </TextBox>
+                            </PasswordBox>
                             <TextBox
         Grid.Row="3"
           materialDesign:HintAssist.Hint="Age"
@@ -178,7 +178,7 @@
           Margin="0 12 0 30" Name="newPhone">
 
                             </TextBox>
-                            
+
                             <Button
                                 Grid.Row="5"
     Style="{StaticResource MaterialDesignRaisedDarkButton}"
