--- a/WpfApp2/WpfApp2/MailsHome.xaml
+++ b/WpfApp2/WpfApp2/MailsHome.xaml
@@ -6,7 +6,8 @@
         xmlns:local="clr-namespace:WpfApp2"
         xmlns:materialDesign="http://m...content-available-to-author-only...l.net/winfx/xaml/themes"
         xmlns:materialDesign1="http://materialdesigninxaml.net/winfx/xaml/themes"
-        Title="MailsHome" Height="1050" Width="1400">
+        Title="MailsHome" Height="1050" Width="1400"
+        Icon="images/logo.ico">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1*"></ColumnDefinition>
@@ -149,7 +150,7 @@
                                             <TextBlock Text="{Binding Description }" FontFamily="Comic Sans MS" FontSize="20" Grid.ColumnSpan="2"  TextWrapping="Wrap" Width="700"></TextBlock>
 
                                             <Button Name="deletemsg" Click="Button_Delete" Margin="0 10" Width="120" HorizontalAlignment="Center" Grid.Column="0" Grid.Row="1">Delete</Button>
-                                            <Button Click="Button_Reply" Margin="0 10" Width="120" HorizontalAlignment="Center" Grid.Column="1" Grid.Row="1">Reply</Button>
+                                            <Button Click="Button_Reply"  Margin="0 10" Width="120" HorizontalAlignment="Center" Grid.Column="1" Grid.Row="1">Reply</Button>
 
                                             
 
