--- a/WpfApp2/WpfApp2/Welcome.xaml
+++ b/WpfApp2/WpfApp2/Welcome.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp2"
         mc:Ignorable="d"
-        Title="Welcome" Height="1050" Width="1400"  >
+        Title="Welcome" Height="1050" Width="1400" 
+         Icon="images/logo.ico" >
     <Grid>
         <Frame Name="welcome" NavigationUIVisibility="Hidden"></Frame>
     </Grid>
