--- a/WpfApp2/WpfApp2/sendTo.xaml
+++ b/WpfApp2/WpfApp2/sendTo.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:WpfApp2"
 
         mc:Ignorable="d"
-        Title="New Massege" Height="400" Width="450"
+        Title="OA3M" Height="400" Width="450"
         Icon="images/logo.ico">
 
     <StackPanel Margin="0 12">
@@ -23,7 +23,8 @@
             <TextBlock Margin="0 0 18 0">Subject</TextBlock>
             <TextBox Name="subjectwpf" Width="375"></TextBox>
         </StackPanel>
-        <TextBox Name="descwpf" AcceptsReturn="True" TextWrapping="Wrap" Height="180"/>
+        <TextBox Name="descwpf" AcceptsReturn="True" TextWrapping="Wrap" Height="160"/>
+        <TextBlock Name="Errors" Foreground="Red" FontSize="15" Visibility="Collapsed"  ></TextBlock>
         <StackPanel Orientation="Horizontal">
 
             <Button Name="send" HorizontalAlignment="Left" Margin="30 10" Width="100" Click="Button_sendmsg">Send</Button>
