--- a/WpfApp2/WpfApp2/sendTo.xaml
+++ b/WpfApp2/WpfApp2/sendTo.xaml
@@ -27,8 +27,8 @@
         <TextBlock Name="Errors" Foreground="Red" FontSize="15" Visibility="Collapsed"  ></TextBlock>
         <StackPanel Orientation="Horizontal">
 
-            <Button Name="send" HorizontalAlignment="Left" Margin="30 10" Width="100" Click="Button_sendmsg">Send</Button>
-            <Button x:Name="senddraft" HorizontalAlignment="Right" Margin="0 10 0 10" Width="100" Click="Button_senddraft" Content="Send"/>
+                    <Button IsDefault="True" Name="send" HorizontalAlignment="Left" Margin="30 10" Width="100" Click="Button_sendmsg">Send</Button>
+                    <Button IsDefault="True" x:Name="senddraft" HorizontalAlignment="Right" Margin="0 10 0 10" Width="100" Click="Button_senddraft" Content="Send"/>
             <Button x:Name="draft" HorizontalAlignment="Right" Margin="50 10 0 10" Width="100" Click="Button_discard" Content="Draft it"/>
 
         </StackPanel>
